--- a/SSA/res/layout/gridview.xml
+++ b/SSA/res/layout/gridview.xml
@@ -1,12 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:background="#87CEFA" >
 
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-  		android:background="@drawable/bg"
         android:horizontalSpacing="5dp"
         android:numColumns="5"
         android:id="@+id/mainGrid"
