--- a/SSA/res/layout/fragment1_listview.xml
+++ b/SSA/res/layout/fragment1_listview.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="#87CEFA" >
+    android:background="#D3D3D3" >
 
     <ListView
         android:id="@+id/listview"
