--- a/SSA/res/layout/fragment2_expandable.xml
+++ b/SSA/res/layout/fragment2_expandable.xml
@@ -3,11 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="#87CEFA" >
+    android:background="#D3D3D3" >
  
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>   
+        android:layout_width="match_parent" />  
  
+    <!-- android:groupIndicator="@drawable/expandable_selector" -->
 </LinearLayout>
