--- a/SSA/res/layout/fragment2_list.xml
+++ b/SSA/res/layout/fragment2_list.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp"
-    android:background="#000000">
+    android:padding="12dp"
+    android:background="#666A6D">
  
+    <ImageView
+        android:id="@+id/categoryicon"
+        android:src="@drawable/category"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_centerVertical="true"
+        android:background="@android:color/transparent"
+        android:padding="3dp" />
+    
  
     <TextView
         android:id="@+id/categoryName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:layout_toRightOf="@+id/categoryicon"
+        android:layout_marginLeft="10dp"
+        android:paddingRight="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textSize="17dp"
-        android:textColor="#f9f93d" />
+        android:textColor="#f4f4f4" />
  
-</LinearLayout>
+</RelativeLayout>
