--- a/SSA/res/values/styles.xml
+++ b/SSA/res/values/styles.xml
@@ -1,5 +1,9 @@
 <resources>
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+    </style>
 
-    <style name="AppTheme" parent="android:Theme.Light" />
-
+    <style name="MyActionBar" parent="@android:Widget.Holo.Light.ActionBar.Solid.Inverse">
+    	<item name="android:background">#ff33b5e5</item> <!-- it doesn't work -->
+  	</style>
 </resources>
