--- a/SSA/res/layout/fragment1_row1.xml
+++ b/SSA/res/layout/fragment1_row1.xml
@@ -20,21 +20,48 @@
         android:layout_marginTop="5dip"
         android:layout_toLeftOf="@+id/appid"
         android:layout_toRightOf="@+id/image"
+        android:ellipsize="end"
         android:maxLines="1"
         android:text="title"
         android:textColor="@android:color/black"
-        android:textSize="15dip"
+        android:textSize="20dip"
         android:textStyle="bold" />
+    
+    <TextView
+        android:id="@+id/categoryname"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/appname"
+        android:layout_toLeftOf="@+id/imageView1"
+        android:layout_toRightOf="@+id/image"
+        android:layout_marginBottom="5dip"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="categoryname"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="12dip" />
 
+    <ImageView
+        android:id="@+id/stargrade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="30dp"      
+        android:src="@drawable/star_35" />
+    
     <TextView
         android:id="@+id/appdesc"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appname"
+        android:layout_below="@+id/categoryname"
+        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@+id/image"
         android:layout_toLeftOf="@+id/imageView1"
         android:layout_toRightOf="@+id/image"
         android:ellipsize="end"
-        android:maxLines="3"
+        android:maxLines="1"
         android:text="desc"
         android:textColor="@android:color/black"
         android:textSize="13dip" />
