--- a/SSA/res/layout/fragment2_row.xml
+++ b/SSA/res/layout/fragment2_row.xml
@@ -29,7 +29,7 @@
         android:textStyle="bold" />
     
     <TextView
-        android:id="@+id/categoryname"
+        android:id="@+id/created"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -39,7 +39,7 @@
         android:layout_marginBottom="5dip"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="categoryname"
+        android:text="created"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="12dip" />
 
@@ -74,7 +74,7 @@
         android:layout_alignRight="@+id/image"
         android:layout_centerVertical="true"
         android:layout_marginRight="30dp" />
-    
+
 	<ImageButton 
 	    android:id="@+id/downloadBtn"
         android:layout_width="wrap_content"
@@ -85,5 +85,5 @@
         android:layout_marginRight="15dp"
         android:focusable="false"
         android:focusableInTouchMode="false" />
- 
+
 </RelativeLayout>
