--- a/SSA/res/layout/fragment1_detail_row.xml
+++ b/SSA/res/layout/fragment1_detail_row.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/listview_background" >
+    android:layout_height="fill_parent"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp" >
         
     <TextView
         android:id="@+id/username"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
+        android:layout_marginTop="10dip"
         android:layout_marginLeft="10dip"
         android:ellipsize="end"
         android:maxLines="1"
@@ -21,7 +23,6 @@
         android:id="@+id/installvername"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_below="@+id/username"
         android:layout_toLeftOf="@+id/usergrade"
         android:layout_marginLeft="10dip"
@@ -37,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="30dip" />
     
     <TextView
         android:id="@+id/comment"
@@ -47,8 +48,6 @@
         android:layout_below="@+id/installvername"
         android:layout_marginLeft="10dip"
         android:layout_alignParentRight="true"
-        android:ellipsize="end"
-        android:maxLines="1"
         android:text="comment"
         android:textColor="@android:color/black"
         android:textSize="13dip" />
@@ -59,17 +58,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dip"
+        android:layout_marginTop="10dip"
         android:text="2014-07-28"
         android:textColor="@android:color/black"
         android:textSize="12dip" />
         
-<!--     <ProgressBar -->
-<!--         android:id="@+id/pbar" -->
-<!--         style="?android:attr/progressBarStyleSmall" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:layout_centerVertical="true" -->
-<!--         android:layout_marginRight="30dp" /> -->
+	<View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#808080" />
 
 </RelativeLayout>
