--- a/SSA_testlauncher/res/layout/activity_test_launcher.xml
+++ b/SSA_testlauncher/res/layout/activity_test_launcher.xml
@@ -7,7 +7,24 @@
     <Button android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click me and see if you can access BasActivity"
-    />
+        android:layout_gravity="left|top"
+        android:background="@drawable/selector"
+        android:textColor="#f5f5f5" />
 
+    <TextView
+        android:id="@+id/userinfo"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="User Info"
+        android:textColor="@android:color/black"
+        android:textSize="15dip" />
+    
+    <TextView
+        android:id="@+id/appdownloadurl"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="App Download URL(False Data)"
+        android:textColor="@android:color/black"
+        android:textSize="20dip" />
+        
 </LinearLayout>
