--- a/SSA/res/layout/fragment3_detail.xml
+++ b/SSA/res/layout/fragment3_detail.xml
@@ -70,7 +70,8 @@
 	<View
 	    android:layout_width="fill_parent"
 	    android:layout_height="1dp"
-	    android:background="@android:color/holo_orange_dark"/>
+	    android:background="@android:color/holo_blue_dark"
+	    android:padding="10dp"/>
 	
     <ScrollView 
         android:id="@+id/myview"
