--- a/SSA/res/layout/fragment1_detail_row.xml
+++ b/SSA/res/layout/fragment1_detail_row.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:paddingTop="10dp" >
         
     <TextView
@@ -15,7 +15,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:text="username"
-        android:textColor="@android:color/black"
+        android:textColor="#504A4B"
         android:textSize="13dip"
         android:textStyle="bold" />
     
@@ -30,7 +30,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:text="1.0"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="#504A4B"
         android:textSize="12dip" />
 
     <ImageView
@@ -49,7 +49,7 @@
         android:layout_marginLeft="10dip"
         android:layout_alignParentRight="true"
         android:text="comment"
-        android:textColor="@android:color/black"
+        android:textColor="#504A4B"
         android:textSize="13dip" />
 
     <TextView
@@ -60,12 +60,12 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dip"
         android:text="2014-07-28"
-        android:textColor="@android:color/black"
+        android:textColor="#504A4B"
         android:textSize="12dip" />
         
 	<View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#808080" />
+        android:background="#D1D0CE" />
 
 </RelativeLayout>
