--- a/SSA/res/layout/application_detail.xml
+++ b/SSA/res/layout/application_detail.xml
@@ -57,7 +57,6 @@
 	        android:layout_alignParentTop="true"
 	        android:layout_centerVertical="true"
 	        android:layout_marginRight="15dp"
-	        android:text="@string/download"
 	        android:textColor="@android:color/holo_blue_dark"
 	        android:textSize="12dip"
 	        android:textStyle="bold"
@@ -280,41 +279,11 @@
 			        android:layout_height="wrap_content"
 			        android:text="@string/write_review"
 			        android:textColor="#413839"
+			        android:textSize="12dip"
 			        android:background="@drawable/review_btn_selector" />
 			    
 			</LinearLayout>
 
-<!-- 	    	<LinearLayout  -->
-<!-- 	        	android:orientation="horizontal" -->
-<!-- 			    android:layout_width="fill_parent" -->
-<!-- 			    android:layout_height="fill_parent" > -->
-			    
-<!-- 			    <TextView -->
-<!-- 					android:layout_width="wrap_content" -->
-<!-- 					android:layout_height="wrap_content" -->
-<!-- 					android:paddingLeft="7dp" -->
-	    			
-<!-- 	    			android:layout_marginTop="15dp" -->
-<!-- 					android:text="@string/review" -->
-<!-- 					android:textColor="#413839" -->
-<!-- 			        android:textSize="18dip" -->
-<!-- 			        android:textStyle="bold" />     -->
-			        
-<!-- 			    <Button -->
-<!-- 				    android:id="@+id/reviewbtn" -->
-<!-- 			        android:layout_width="wrap_content" -->
-<!-- 			        android:layout_height="wrap_content" -->
-<!-- 			        android:paddingRight="7dp" -->
-<!-- 			        android:layout_gravity="center_vertical" -->
-<!-- 			        android:layout_marginTop="15dp" -->
-<!-- 			        android:text="write" -->
-<!-- 			        android:background="@drawable/download_btn_selector" -->
-<!-- 			        android:minHeight="20px" android:maxHeight="100px" android:height="60px" -->
-<!-- 			        android:textColor="#413839" -->
-<!-- 			        android:textSize="12dip" /> -->
-			    
-<!-- 		    </LinearLayout> -->
-		    
 		    <LinearLayout
                 android:id="@+id/commentlistview"
                 android:layout_width="match_parent"
