--- a/SSA/res/layout/update_detail.xml
+++ b/SSA/res/layout/update_detail.xml
@@ -49,6 +49,23 @@
 	        android:textSize="12dip"
 	        android:textStyle="bold" />
 		
+		<TextView
+	        android:id="@+id/appvername"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/categoryname"
+	        android:layout_alignParentRight="true"
+	        android:layout_alignBottom="@+id/appicon"
+	        android:layout_marginRight="50dp"
+        	android:layout_toLeftOf="@+id/downloadBtn"
+        	android:layout_toRightOf="@+id/appicon"
+	        android:ellipsize="end"
+	        android:maxLines="1"
+	        android:text="appvername"
+	        android:textColor="@android:color/holo_blue_dark"
+	        android:textSize="12dip"
+	        android:textStyle="bold" />
+		
 		<Button
 		    android:id="@+id/downloadbtn"
 	        android:layout_width="wrap_content"
@@ -57,7 +74,6 @@
 	        android:layout_alignParentTop="true"
 	        android:layout_centerVertical="true"
 	        android:layout_marginRight="15dp"
-	        android:text="@string/update"
 	        android:textColor="@android:color/holo_blue_dark"
 	        android:textSize="12dip"
 	        android:textStyle="bold"
