--- a/SSA/res/menu/tab.xml
+++ b/SSA/res/menu/tab.xml
@@ -7,7 +7,7 @@
         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_action_search"
         android:showAsAction="always"
-        android:orderInCategory="100"
+        android:actionViewClass="android.widget.SearchView"
         android:title="@string/action_settings"/>
 
 </menu>
