--- a/SSA/res/layout/application_row.xml
+++ b/SSA/res/layout/application_row.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/list_bg"
     android:descendantFocusability="blocksDescendants" >
-
+        
     <ImageView
         android:id="@+id/image"
         android:layout_width="80dp"
@@ -13,6 +13,13 @@
         android:layout_margin="5dp"
         android:background="@android:color/transparent"
         android:padding="3dp" />
+        
+    <ImageView
+        android:id="@+id/isnewicon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp" />
         
     <TextView
         android:id="@+id/appname"
