--- a/SSA/res/layout/category_child.xml
+++ b/SSA/res/layout/category_child.xml
@@ -19,7 +19,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
-        android:layout_toLeftOf="@+id/appid"
         android:layout_toRightOf="@+id/image"
         android:ellipsize="end"
         android:maxLines="1"
@@ -55,9 +54,11 @@
         android:id="@+id/appdesc"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/categoryname"
+        android:layout_below="@+id/created"
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@+id/image"
+        android:layout_marginTop="6dp"
+        android:layout_marginRight="50dp"
         android:layout_toLeftOf="@+id/downloadBtn"
         android:layout_toRightOf="@+id/image"
         android:ellipsize="end"
