--- a/SSA/res/values/dimens.xml
+++ b/SSA/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="padding_large">16dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="navigation_layout_width">260dp</dimen>    
 </resources>
