edit myapp fragment

--- a/SSA/res/menu/menu.xml
+++ b/SSA/res/menu/menu.xml
@@ -12,5 +12,5 @@
         android:id="@+id/menu_update"
         android:icon="@drawable/ic_action_update"
         android:title="@string/update"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom|collapseActionView"/>
 </menu>
