--- a/SSA/res/layout/navigation_main.xml
+++ b/SSA/res/layout/navigation_main.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/titleDrawer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_toRightOf="@+id/ImgDrawer"
@@ -50,13 +50,14 @@
                 
                 <ImageView
                     android:id="@+id/ImgDrawer"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="14dp"
+                    android:layout_marginRight="7dp"
                     android:contentDescription="@string/app_name"
-                    android:src="@drawable/noimage" />
+                    android:src="@drawable/filled_star" />
             </RelativeLayout>
 
             <ListView
