view right panel list(app) in tablet

--- a/SSA/res/layout/fragment_item_detail.xml
+++ b/SSA/res/layout/fragment_item_detail.xml
@@ -1,3 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="#D3D3D3" >
+
+    <ListView
+        android:id="@+id/detaillistview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:cacheColorHint="#00000000" >
+    </ListView>
+
+</RelativeLayout>
+
+<!-- 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_detail"
@@ -7,4 +24,4 @@
     android:padding="16dp"
     android:textIsSelectable="true"
     tools:context="com.sds.ssa.tablet.ItemDetailFragment" />
-
+-->
