--- a/SSA/res/values-sw600dp/refs.xml
+++ b/SSA/res/values-sw600dp/refs.xml
@@ -7,6 +7,6 @@
     For more on layout aliases, see:
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
-    <item name="activity_item_list" type="layout">@layout/activity_item_twopane</item>
+    <item name="tablet_activity_item_list" type="layout">@layout/tablet_activity_item_twopane</item>
 
 </resources>
