--- a/SSA/res/values-large/refs.xml
+++ b/SSA/res/values-large/refs.xml
@@ -8,5 +8,6 @@
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
     <item name="tablet_activity_item_list" type="layout">@layout/tablet_activity_item_twopane</item>
-
+ 	<item name="tablet_activity_app_list" type="layout">@layout/tablet_activity_app_twopane</item>
+ 
 </resources>
